terraform/authentik/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    meta.helm.sh/release-name: kubernetes-live-metrics-dashboard
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2025-12-06T23:28:51Z"
  generation: 4
  labels:
    app.kubernetes.io/instance: kubernetes-live-metrics-dashboard
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubernetes-live-metrics-dashboard
    helm.sh/chart: app-template-4.5.0_1a39cfda7c31
    helm.toolkit.fluxcd.io/name: kubernetes-live-metrics-dashboard
    helm.toolkit.fluxcd.io/namespace: default
  name: kubernetes-live-metrics-dashboard
  namespace: default
  resourceVersion: "5306879"
  uid: f026da94-73fb-4eff-b221-4ac643b56440
spec:
  hostnames:
  - live.jnobrega.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external
    namespace: network
    sectionName: websecure
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: kubernetes-live-metrics-dashboard
      namespace: default
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents:
  - conditions:
    - lastTransitionTime: "2025-12-07T13:01:52Z"
      message: ""
      observedGeneration: 4
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-12-07T13:01:52Z"
      message: ""
      observedGeneration: 4
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: traefik.io/gateway-controller
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: external
      namespace: network
      sectionName: websecure
